--- a/SR-Slider.html
+++ b/SR-Slider.html
@@ -19,6 +19,8 @@
 	<div id="content">
 		<div id="game-container">
 			<!-- Here you go bro -->
+			<!-- second attempt at forking your repo, brobro -->
+			<!-- what even is github?! -->
 		</div>
 	</div>
 
