--- a/SR-Slider.html
+++ b/SR-Slider.html
@@ -9,6 +9,9 @@
     <meta name="author" general="Stephen Ramirez">
 
 	<link rel="stylesheet" type="text/css" href="styles.css">
+	<script type="text/javascript" src="slide.js"></script>
+	    <script src="jquery-2.1.1.js"></script>
+
 </head>
 
 <body>
@@ -18,9 +21,7 @@
 
 	<div id="content">
 		<div id="game-container">
-			<!-- Here you go bro -->
-			<!-- second attempt at forking your repo, brobro -->
-			<!-- what even is github?! -->
+			<section id="command"></section>
 		</div>
 	</div>
 
